namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-prisoner-facing-lwp-poc-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-prisoner-facing-lwp-poc-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "plp-dev"
    cloud-platform.justice.gov.uk/application: "Prisoner Facing"
    cloud-platform.justice.gov.uk/owner: "Personal Learning Plans: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-prisoner-facing-lwp-poc-ui"
    cloud-platform.justice.gov.uk/team-name: "hmpps-learning-and-work-progress-devs"
    cloud-platform.justice.gov.uk/review-after: "2026-09-01"
